   RTP has been outfitted with the same abilities.
 * Added support for setting the Max-Forwards: header in SIP requests. Setting is
   available in device configurations as well as in the dial plan.
 * Addition of the 'subscribe_network_change' option for turning on and off
   res_stun_monitor module support in chan_sip.

IAX2 Changes
-----------
 * Added rtsavesysname option into iax.conf to allow the systname to be saved
   on realtime updates.
 * Added the ability for chan_iax2 to inform the dialplan whether or not
   encryption is being used. This interoperates with the SIP SRTP implementation
   so that a secure SIP call can be bridged to a secure IAX call when the
   dialplan requires bridged channels to be "secure".
 * Addition of the 'subscribe_network_change' option for turning on and off
   res_stun_monitor module support in chan_iax.


MGCP Changes
------------
 * Added ability to preset channel variables on indicated lines with the setvar
   configuration option.  Also, clearvars=all resets the list of variables back
   to none.
 * PacketCable NCS 1.0 support has been added for Docsis/Eurodocsis Networks.
   See configs/res_pktccops.conf for more information.

Applications
------------
 * Added 'p' option to PickupChan() to allow for picking up channel by the first
   match to a partial channel name.
 * Added .m3u support for Mp3Player application.
 * Added progress option to the app_dial D() option.  When progress DTMF is
   present, those values are sent immediately upon receiving a PROGRESS message
   regardless if the call has been answered or not.
 * Added functionality to the app_dial F() option to continue with execution
   at the current location when no parameters are provided.
 * Added the 'a' option to app_dial to answer the calling channel before any
   announcements or macros are executed.
 * Modified app_dial to set answertime when the called channel answers even if
   the called channel hangs up during playback of an announcement.